--- a/templates/about.html
+++ b/templates/about.html
@@ -24,12 +24,12 @@ async def your_page(request: Request):
 
         <h3>Step 2: Create a Template</h3>
         <p>Create a new file in <code>templates/your_page.html</code>:</p>
-        <pre><code>{% extends "base.html" %}
+        <pre><code>{&#37; extends &quot;base.html&quot; &#37;}
 
-{% block content %}
-&lt;h1&gt;{{ title }}&lt;/h1&gt;
+{&#37; block content &#37;}
+&lt;h1&gt;&#123;&#123; title &#125;&#125;&lt;/h1&gt;
 &lt;p&gt;Your content here&lt;/p&gt;
-{% endblock %}</code></pre>
+{&#37; endblock &#37;}</code></pre>
 
         <h3>Step 3: Update Navigation (Optional)</h3>
         <p>Add a link in <code>templates/base.html</code> navigation section.</p>
