--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,8 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/contact">Contact</a></li>
+                <li><a href="/api/users">Users</a></li>
+                <li><a href="/api/posts">Posts</a></li>
             </ul>
         </div>
     </nav>
