--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,15 @@
             <li>Create a corresponding template in <code>templates/</code></li>
             <li>Add a link to your navigation in <code>templates/base.html</code></li>
         </ol>
+        
+        <h3 style="margin-top: 2rem;">Database Examples</h3>
+        <p>This template includes SQLAlchemy ORM examples:</p>
+        <ul>
+            <li><a href="/api/users">View Users</a> - See all users from database</li>
+            <li><a href="/api/posts">View Posts</a> - See all published posts</li>
+            <li><a href="/api/create-example-data">Create Example Data</a> - Add sample data to database</li>
+        </ul>
+        <p>Check <code>models.py</code> for database model definitions and <code>main.py</code> for ORM usage examples.</p>
     </div>
 </div>
 {% endblock %}
