title page: change title

--- a/templates/index.html
+++ b/templates/index.html
@@ -226,7 +226,7 @@
     <div class="container">
         <div class="header">
             <h1>QuiteMap</h1>
-            <p>Создавайте интерактивные карты тишины</p>
+            <p>Поиск тихих мест</p>
         </div>
 
         <div class="form-container">
